--- a/.swiftlint.yml
+++ b/.swiftlint.yml
@@ -1,9 +1,6 @@
-excluded:
- - Pods
- - Carthage
- - Build
- - Generated
- - Generated/Assets
+included:
+- phantomgames
+- phantomgamesTests
 disabled_rules:
 - trailing_whitespace
 opt_in_rules:
@@ -27,18 +24,15 @@ opt_in_rules:
  - file_name_no_space
  - first_where
  - flatmap_over_map_reduce
- - force_cast
  - force_unwrapping
  - force_try
  - function_body_length
  - function_parameter_count
  - identical_operands
- - identifier_name
  - implicit_return
  - implicitly_unwrapped_optional
  - last_where
  - legacy_multiple
- - line_length
  - multiline_arguments
  - multiline_parameters
  - operator_usage_whitespace
@@ -67,14 +61,8 @@ opt_in_rules:
  - yoda_condition
 line_length:
  warning: 140
- error: 200
-
-
-
-
-
-
-
-
-
-
+force_cast:
+ severity: warning
+identifier_name:
+ severity: warning
+ validates_start_with_lowercase: warning
